--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 			<!-- <p>By HTML5 UP</p> -->
 		</header>
 		<footer>
-			<a href="#banner" class="button style2 scrolly-middle">About me</a>
+			<a href="#banner" class="button style2 scrolly-middle">Software Engineer</a>
 		</footer>
 	</section>
 
 	<!-- Banner -->
 	<section id="banner">
 		<header>
-			<h2>This is Overflow</h2>
+			<h2>About me</h2>
 		</header>
 		<p>Simply put, I love to code. From the windy city, I enjoy the sleuthwork of unwinding the source of a
 			bothersome bug.
@@ -64,39 +64,38 @@
 
 	<!-- Feature 1 -->
 	<article id="first" class="container box style1 right">
-		<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+		<a href="https://hangrychef.herokuapp.com/" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 		<div class="inner">
 			<header>
 				<h2>HangryChef<br />
-					dolor sit amet</h2>
+					Redux, React, Javascript, CSS, Python, and PostgreSQL</h2>
 			</header>
-			<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit
-				tristique velit tempus etiam.</p>
+			<p>An app that allows users to create a menu using drag and drop. Create a qr code for that menu that
+				customers can see. A checkout feature for customers where they can purchase items from the menu. The
+				ability for a user to track inventory, staff, reviews, and sales.</p>
 		</div>
 	</article>
 
 	<!-- Feature 2 -->
 	<article class="container box style1 left">
-		<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+		<a href="https://speakeasylite.herokuapp.com/login" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 		<div class="inner">
 			<header>
 				<h2>SpeakEasy<br />
-					lectus lacus</h2>
+					Redux, React, Javascript, CSS, Python, and PostgreSQL</h2>
 			</header>
-			<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis
-				magna lorem ipsum dolor.</p>
+			<p></p>
 		</div>
 	</article>
 	<!-- Feature 3 -->
 	<article class="container box style1 left">
-		<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+		<a href="https://aa-querylite.herokuapp.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 		<div class="inner">
 			<header>
 				<h2>Query<br />
-					lectus lacus</h2>
+					Pug, Javascript, CSS, Express, REGEX, and PostgreSQL</h2>
 			</header>
-			<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis
-				magna lorem ipsum dolor.</p>
+			<p>An app that allowes users to post a question where other users can answer it.</p>
 		</div>
 	</article>
 
@@ -104,8 +103,8 @@
 	<article class="container box style2">
 		<header>
 			<h2>Chris Sorini</h2>
-			<p>Justo phasellus et aenean dignissim<br />
-				placerat cubilia purus lectus.</p>
+			<p>Skills<br />
+			</p>
 		</header>
 		<div class="inner gallery">
 			<div class="row gtr-0">
