--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 
 	<section id="footer">
 		<ul class="icons">
-			<li><a href="https://github.com/Csorini550" class="icon brands fa-github"><span
-						class="label">Twitter</span></a></li>
+			<li><a href="https://github.com/Csorini550" class="icon brands fa-dribbble"><span
+						class="label">GithuB</span></a></li>
 			<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 			<!-- <li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li> -->
 			<!-- <li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li> -->
