--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<a href="https://hangrychef.herokuapp.com/" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 		<div class="inner">
 			<header>
-				<h2>HangryChef<br />
+				<h2><strong>HangryChef</strong><br />
 					Redux, React, Javascript, CSS, Python, and PostgreSQL</h2>
 			</header>
 			<p>An app that allows users to create a menu using drag and drop. Create a qr code for that menu that
@@ -81,18 +81,18 @@
 		<a href="https://speakeasylite.herokuapp.com/login" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 		<div class="inner">
 			<header>
-				<h2>SpeakEasy<br />
-					Redux, React, Javascript, CSS, Python, and PostgreSQL</h2>
+				<h2><strong>SpeakEasy</strong><br />
+					Redux, React, Javascript, CSS, Python, and PostgreSQL, AWS</h2>
 			</header>
-			<p></p>
+			<p>An app that allowes users to create a venue and search for venues in specific areas.</p>
 		</div>
 	</article>
 	<!-- Feature 3 -->
-	<article class="container box style1 left">
+	<article class="container box style1 right">
 		<a href="https://aa-querylite.herokuapp.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 		<div class="inner">
 			<header>
-				<h2>Query<br />
+				<h2><strong>Query</strong><br />
 					Pug, Javascript, CSS, Express, REGEX, and PostgreSQL</h2>
 			</header>
 			<p>An app that allowes users to post a question where other users can answer it.</p>
