--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
 		</header>
 		<div class="inner gallery">
 			<div class="row gtr-0">
-				<div class="col-3 col-12-mobile"><a href="images/fulls/01.jpg" class="image fit"><img
-							src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
+				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/21278/css3" class="image fit"><img
+							src="https://img.icons8.com/color/96/000000/css3.png" alt="" title="Ad infinitum" />
+						CSS3</a>
+				</div>
 				<div class="col-3 col-12-mobile"><a href="images/fulls/02.jpg" class="image fit"><img
 							src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
 				<div class="col-3 col-12-mobile"><a href="images/fulls/03.jpg" class="image fit"><img
