--- a/index.html
+++ b/index.html
@@ -106,16 +106,25 @@
 			<p>Skills<br />
 			</p>
 		</header>
+
+		<a href="https://icons8.com/icon/bzf0DqjXFHIW/react">React icon by Icons8</a>
 		<div class="inner gallery">
 			<div class="row gtr-0">
 				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/21278/css3" class="image fit"><img
 							src="https://img.icons8.com/color/96/000000/css3.png" alt="" title="Ad infinitum" />
 						CSS3</a>
 				</div>
-				<div class="col-3 col-12-mobile"><a href="images/fulls/02.jpg" class="image fit"><img
-							src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-				<div class="col-3 col-12-mobile"><a href="images/fulls/03.jpg" class="image fit"><img
-							src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
+
+				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/46605/html-5" class="image fit"><img
+							src="https://img.icons8.com/dusk/64/000000/html-5.png" alt=""
+							title="Dressed in Clarity" />HTML5</a></div>
+
+
+				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/bzf0DqjXFHIW/react"
+						class="image fit"><img src="https://img.icons8.com/office/80/000000/react.png" alt=""
+							title="Raven" />React.js</a></div>
+
+
 				<div class="col-3 col-12-mobile"><a href="images/fulls/04.jpg" class="image fit"><img
 							src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
 			</div>
