--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</p>
 		</header>
 
-		<a href="https://icons8.com/icon/bzf0DqjXFHIW/react">React icon by Icons8</a>
+
 		<div class="inner gallery">
 			<div class="row gtr-0">
 				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/21278/css3" class="image fit"><img
@@ -125,9 +125,11 @@
 							title="Raven" />React.js</a></div>
 
 
-				<div class="col-3 col-12-mobile"><a href="images/fulls/04.jpg" class="image fit"><img
-							src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/gYCTehfTlYk5/javascript-logo"
+						class="image fit"><img src="https://img.icons8.com/dusk/64/000000/javascript-logo.png" alt=""
+							title="I'll have a cup of Disneyland, please" />JavaScript</a></div>
 			</div>
+
 			<div class="row gtr-0">
 				<div class="col-3 col-12-mobile"><a href="images/fulls/05.jpg" class="image fit"><img
 							src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
