Added first gif

--- a/index.html
+++ b/index.html
@@ -62,9 +62,15 @@
 		</footer>
 	</section>
 
+
+	<!-- <a href="https://giphy.com/gifs/mvDMQDu7WJERn4cDwO"></a> -->
+
+
 	<!-- Feature 1 -->
 	<article id="first" class="container box style1 right">
-		<a href="https://hangrychef.herokuapp.com/" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+		<a href="https://hangrychef.herokuapp.com/" class="image fit"><iframe
+				src="https://giphy.com/embed/mvDMQDu7WJERn4cDwO" width="480" height="300" frameBorder="0"
+				class="giphy-embed" allowFullScreen></iframe></a>
 		<div class="inner">
 			<header>
 				<h2><strong>HangryChef</strong><br />
