--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 	<!-- Feature 1 -->
 	<article id="first" class="container box style1 right">
 		<a href="https://hangrychef.herokuapp.com/" class="image fit"><iframe
-				src="https://giphy.com/embed/mvDMQDu7WJERn4cDwO" width="480" height="300" frameBorder="0"
-				class="giphy-embed" allowFullScreen></iframe></a>
+				src="https://giphy.com/embed/mvDMQDu7WJERn4cDwO" width="480" height="700" frameBorder="0"
+				allowFullScreen></iframe></a>
 		<div class="inner">
 			<header>
 				<h2><strong>HangryChef</strong><br />
