--- a/index.html
+++ b/index.html
@@ -65,20 +65,26 @@
 
 	<!-- <a href="https://giphy.com/gifs/mvDMQDu7WJERn4cDwO"></a> -->
 
-
+	<iframe src="https://giphy.com/embed/im28zTYxDktsJsRtLi" width="480" height="300" frameBorder="0"
+		class="giphy-embed" allowFullScreen></iframe>
+	<p><a href="https://giphy.com/gifs/im28zTYxDktsJsRtLi">via GIPHY</a></p>
 	<!-- Feature 1 -->
 	<article id="first" class="container box style1 right">
 		<a href="https://hangrychef.herokuapp.com/" class="image fit"><iframe
-				src="https://giphy.com/embed/mvDMQDu7WJERn4cDwO" width="480" height="700" frameBorder="0"
-				allowFullScreen></iframe></a>
+				src="https://giphy.com/embed/mvDMQDu7WJERn4cDwO" width="480" height="300" frameBorder="0"
+				class="giphy-embed" allowFullScreen></iframe>
+			<iframe src="https://giphy.com/embed/im28zTYxDktsJsRtLi" width="480" height="300" frameBorder="0"
+				class="giphy-embed" allowFullScreen></iframe></a>
 		<div class="inner">
-			<header>
-				<h2><strong>HangryChef</strong><br />
-					Redux, React, Javascript, CSS, Python, and PostgreSQL</h2>
-			</header>
-			<p>An app that allows users to create a menu using drag and drop. Create a qr code for that menu that
-				customers can see. A checkout feature for customers where they can purchase items from the menu. The
-				ability for a user to track inventory, staff, reviews, and sales.</p>
+			<a href="https://hangrychef.herokuapp.com/">
+				<header>
+					<h2><strong>HangryChef</strong><br />
+						Redux, React, Javascript, CSS, Python, and PostgreSQL</h2>
+				</header>
+				<p>An app that allows users to create a menu using drag and drop. Create a qr code for that menu that
+					customers can see. A checkout feature for customers where they can purchase items from the menu. The
+					ability for a user to track inventory, staff, reviews, and sales.</p>
+			</a>
 		</div>
 	</article>
 
