--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 		<a href="https://hangrychef.herokuapp.com/" class="image fit"><iframe
 				src="https://giphy.com/embed/mvDMQDu7WJERn4cDwO" width="480" height="300" frameBorder="0"
 				class="giphy-embed" allowFullScreen></iframe>
-			<iframe src="https://giphy.com/embed/im28zTYxDktsJsRtLi" width="480" height="300" frameBorder="0"
-				class="giphy-embed" allowFullScreen></iframe></a>
+			<iframe src="https://giphy.com/embed/2gfLgNgeZfSs6Pfh8F" width="480" height="300" frameBorder="0"
+				class="giphy-embed" allowFullScreen></iframe>
+		</a>
 		<div class="inner">
 			<a href="https://hangrychef.herokuapp.com/">
 				<header>
