--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <html>
 
 <head>
+	<div className="profile-pic">
+		<img src="https://i.imgur.com/VNmi7cn.jpg" />
+	</div>
 	<title>Portfolio by Chris Sorini</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
