--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<div className="profile-pic">
+	<div class="profile-pic">
 		<img src="https://i.imgur.com/VNmi7cn.jpg" />
 	</div>
 	<title>Portfolio by Chris Sorini</title>
