--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <html>
 
 <head>
-	<div class="profile-pic">
-		<img src="https://i.imgur.com/VNmi7cn.jpg" />
-	</div>
-	<title>Portfolio by Chris Sorini</title>
+	<title>
+		<img id="profile-pic" src="https://i.imgur.com/VNmi7cn.jpg" />
+		Portfolio by Chris Sorini
+	</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
