--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 			</p>
 		</header>
 
+		<a href="https://icons8.com/icon/33039/amazon-web-services">Amazon Web Services icon by Icons8</a>
 
 		<div class="inner gallery">
 			<div class="row gtr-0">
@@ -130,30 +131,33 @@
 				</div>
 
 				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/46605/html-5" class="image fit"><img
-							src="https://img.icons8.com/dusk/64/000000/html-5.png" alt=""
-							title="Dressed in Clarity" />HTML5</a></div>
+							src="https://img.icons8.com/dusk/64/000000/html-5.png" alt="" />HTML5</a></div>
 
 
 				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/bzf0DqjXFHIW/react"
-						class="image fit"><img src="https://img.icons8.com/office/80/000000/react.png" alt=""
-							title="Raven" />React.js</a></div>
+						class="image fit"><img src="https://img.icons8.com/office/80/000000/react.png"
+							alt="" />React.js</a></div>
 
 
 				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/gYCTehfTlYk5/javascript-logo"
-						class="image fit"><img src="https://img.icons8.com/dusk/64/000000/javascript-logo.png" alt=""
-							title="I'll have a cup of Disneyland, please" />JavaScript</a></div>
+						class="image fit"><img src="https://img.icons8.com/dusk/64/000000/javascript-logo.png"
+							alt="" />JavaScript</a></div>
 			</div>
+			<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/33039/amazon-web-services"
+					class="image fit"><img src="https://img.icons8.com/color/48/000000/amazon-web-services.png"
+						alt="" />Amazon Web Services</a></div>
+		</div>
 
-			<div class="row gtr-0">
-				<div class="col-3 col-12-mobile"><a href="images/fulls/05.jpg" class="image fit"><img
-							src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-				<div class="col-3 col-12-mobile"><a href="images/fulls/06.jpg" class="image fit"><img
-							src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-				<div class="col-3 col-12-mobile"><a href="images/fulls/07.jpg" class="image fit"><img
-							src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-				<div class="col-3 col-12-mobile"><a href="images/fulls/08.jpg" class="image fit"><img
-							src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-			</div>
+		<div class="row gtr-0">
+			<div class="col-3 col-12-mobile"><a href="images/fulls/05.jpg" class="image fit"><img
+						src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
+			<div class="col-3 col-12-mobile"><a href="images/fulls/06.jpg" class="image fit"><img
+						src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
+			<div class="col-3 col-12-mobile"><a href="images/fulls/07.jpg" class="image fit"><img
+						src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
+			<div class="col-3 col-12-mobile"><a href="images/fulls/08.jpg" class="image fit"><img
+						src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+		</div>
 		</div>
 	</article>
 
