--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
 	<article class="container box style1 left">
 		<a href="https://speakeasylite.herokuapp.com/login" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 		<div class="inner">
-			<header>
-				<h2><strong>SpeakEasy</strong><br />
-					Redux, React, Javascript, CSS, Python, and PostgreSQL, AWS</h2>
-			</header>
-			<p>An app that allowes users to create a venue and search for venues in specific areas.</p>
+			<a href="https://speakeasylite.herokuapp.com/login">
+				<header>
+					<h2><strong>SpeakEasy</strong><br />
+						Redux, React, Javascript, CSS, Python, and PostgreSQL, AWS</h2>
+				</header>
+				<p>An app that allowes users to create a venue and search for venues in specific areas.</p>
+			</a>
 		</div>
 	</article>
 	<!-- Feature 3 -->
@@ -143,14 +145,13 @@
 						class="image fit"><img src="https://img.icons8.com/dusk/64/000000/javascript-logo.png"
 							alt="" />JavaScript</a></div>
 			</div>
-			<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/33039/amazon-web-services"
-					class="image fit"><img src="https://img.icons8.com/color/48/000000/amazon-web-services.png"
-						alt="" />Amazon Web Services</a></div>
+
 		</div>
 
 		<div class="row gtr-0">
-			<div class="col-3 col-12-mobile"><a href="images/fulls/05.jpg" class="image fit"><img
-						src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
+			<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/33039/amazon-web-services"
+					class="image fit"><img src="https://img.icons8.com/color/48/000000/amazon-web-services.png"
+						alt="" />Amazon Web Services</a></div>
 			<div class="col-3 col-12-mobile"><a href="images/fulls/06.jpg" class="image fit"><img
 						src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
 			<div class="col-3 col-12-mobile"><a href="images/fulls/07.jpg" class="image fit"><img
