--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
 
 	<!-- Feature 2 -->
 	<article class="container box style1 left">
-		<a href="https://speakeasylite.herokuapp.com/login" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+		<a href="https://speakeasylite.herokuapp.com/login" class="image fit"><iframe
+				src="https://giphy.com/embed/bmo8JCudSowVPs64hp" width="480" height="300" frameBorder="0"
+				class="giphy-embed" allowFullScreen></iframe>
+		</a>
 		<div class="inner">
 			<a href="https://speakeasylite.herokuapp.com/login">
 				<header>
@@ -105,7 +108,10 @@
 	</article>
 	<!-- Feature 3 -->
 	<article class="container box style1 right">
-		<a href="https://aa-querylite.herokuapp.com/" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+		<a href="https://aa-querylite.herokuapp.com/" class="image fit"><iframe
+				src="https://giphy.com/embed/oXP0weI9EpHWQ762rx" width="480" height="295" frameBorder="0"
+				class="giphy-embed" allowFullScreen></iframe>
+		</a>
 		<div class="inner">
 			<header>
 				<h2><strong>Query</strong><br />
@@ -123,7 +129,6 @@
 			</p>
 		</header>
 
-		<a href="https://icons8.com/icon/33039/amazon-web-services">Amazon Web Services icon by Icons8</a>
 
 		<div class="inner gallery">
 			<div class="row gtr-0">
@@ -132,8 +137,8 @@
 						CSS3</a>
 				</div>
 
-				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/46605/html-5" class="image fit"><img
-							src="https://img.icons8.com/dusk/64/000000/html-5.png" alt="" />HTML5</a></div>
+				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/20909/html-5" class="image fit"><img
+							src="https://img.icons8.com/color/48/000000/html-5.png" alt="" />HTML5</a></div>
 
 
 				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/bzf0DqjXFHIW/react"
@@ -141,23 +146,26 @@
 							alt="" />React.js</a></div>
 
 
-				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/gYCTehfTlYk5/javascript-logo"
-						class="image fit"><img src="https://img.icons8.com/dusk/64/000000/javascript-logo.png"
+				<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/V6HShIzw21x7/javascript"
+						class="image fit"><img src="https://img.icons8.com/nolan/64/javascript.png"
 							alt="" />JavaScript</a></div>
 			</div>
 
 		</div>
 
+
 		<div class="row gtr-0">
 			<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/33039/amazon-web-services"
 					class="image fit"><img src="https://img.icons8.com/color/48/000000/amazon-web-services.png"
 						alt="" />Amazon Web Services</a></div>
-			<div class="col-3 col-12-mobile"><a href="images/fulls/06.jpg" class="image fit"><img
-						src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-			<div class="col-3 col-12-mobile"><a href="images/fulls/07.jpg" class="image fit"><img
-						src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-			<div class="col-3 col-12-mobile"><a href="images/fulls/08.jpg" class="image fit"><img
-						src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+
+			<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/13441/python" class="image fit"><img
+						src="https://img.icons8.com/color/48/000000/python.png" alt="" />Python</a></div>
+
+			<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/38561/postgresql" class="image fit"><img
+						src="https://img.icons8.com/color/48/000000/postgreesql.png" alt="" />PostgreSQL</a></div>
+			<div class="col-3 col-12-mobile"><a href="https://icons8.com/icon/jD-fJzVguBmw/redux" class="image fit"><img
+						src="https://img.icons8.com/color/48/000000/redux.png" alt="" />Redux</a></div>
 		</div>
 		</div>
 	</article>
