--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	<!-- Feature 2 -->
 	<article class="container box style1 left">
 		<a href="https://speakeasylite.herokuapp.com/login" class="image fit"><iframe
-				src="https://giphy.com/embed/bmo8JCudSowVPs64hp" width="480" height="300" frameBorder="0"
+				src="https://giphy.com/embed/bmo8JCudSowVPs64hp" width="480" height="490" frameBorder="0"
 				class="giphy-embed" allowFullScreen></iframe>
 		</a>
 		<div class="inner">
@@ -109,15 +109,17 @@
 	<!-- Feature 3 -->
 	<article class="container box style1 right">
 		<a href="https://aa-querylite.herokuapp.com/" class="image fit"><iframe
-				src="https://giphy.com/embed/oXP0weI9EpHWQ762rx" width="480" height="295" frameBorder="0"
+				src="https://giphy.com/embed/oXP0weI9EpHWQ762rx" width="480" height="490" frameBorder="0"
 				class="giphy-embed" allowFullScreen></iframe>
 		</a>
 		<div class="inner">
-			<header>
-				<h2><strong>Query</strong><br />
-					Pug, Javascript, CSS, Express, REGEX, and PostgreSQL</h2>
-			</header>
-			<p>An app that allowes users to post a question where other users can answer it.</p>
+			<a href="https://aa-querylite.herokuapp.com/">
+				<header>
+					<h2><strong>Query</strong><br />
+						Pug, Javascript, CSS, Express, REGEX, and PostgreSQL</h2>
+				</header>
+				<p>An app that allowes users to post a question where other users can answer it.</p>
+			</a>
 		</div>
 	</article>
 
