--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			<h2>Contact me</h2>
 			<!-- <p>Diam dignissim lectus eu ornare volutpat orci.</p> -->
 		</header>
-		<form method="post" action="#">
+		<form method="POST" action="https://formspree.io/f/mnqoelby">
 			<div class="row gtr-50">
 				<div class="col-6 col-12-mobile"><input type="text" class="text" name="name" placeholder="Name" /></div>
 				<div class="col-6 col-12-mobile"><input type="text" class="text" name="email" placeholder="Email" />
