--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=src/index.html">
     <title>Christopher Sorini | Software Engineer</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="src/images/favicon_logoai/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/images/favicon_logoai/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/images/favicon_logoai/favicon-16x16.png">
+    <link rel="manifest" href="src/images/favicon_logoai/site.webmanifest">
+    <link rel="shortcut icon" href="src/images/favicon_logoai/favicon.ico">
 </head>
 <body>
     <p>If you are not redirected automatically, please <a href="src/index.html">click here</a>.</p>
