--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christopher Sorini | Software Engineer</title>
     <meta name="description" content="Portfolio showcasing Christopher Sorini's journey and projects as a software engineer">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_logoai/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_logoai/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_logoai/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon_logoai/site.webmanifest">
+    <link rel="shortcut icon" href="images/favicon_logoai/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
