--- a/email-test.html
+++ b/email-test.html
@@ -170,7 +170,10 @@
                 email: document.getElementById('email').value,
                 subject: document.getElementById('subject').value,
                 message: document.getElementById('message').value,
-                to_email: 'csorini13@gmail.com'
+                to_name: "Christopher Sorini",
+                to_email: 'csorini13@gmail.com',
+                from_name: document.getElementById('name').value,
+                reply_to: document.getElementById('email').value
             };
             
             debugLog('Sending email with data: ' + JSON.stringify(data));
