Add recipient parameter and create EmailJS template configuration guide

--- a/email-test.html
+++ b/email-test.html
@@ -172,6 +172,7 @@
                 message: document.getElementById('message').value,
                 to_name: "Christopher Sorini",
                 to_email: 'csorini13@gmail.com',
+                recipient: 'csorini13@gmail.com',
                 from_name: document.getElementById('name').value,
                 reply_to: document.getElementById('email').value
             };
