Hard-code recipient email addresses to ensure all messages go to csorini13@gmail.com

--- a/email-test.html
+++ b/email-test.html
@@ -173,6 +173,9 @@
                 to_name: "Christopher Sorini",
                 to_email: 'csorini13@gmail.com',
                 recipient: 'csorini13@gmail.com',
+                email_to: 'csorini13@gmail.com',
+                destination: 'csorini13@gmail.com',
+                toEmail: 'csorini13@gmail.com',
                 from_name: document.getElementById('name').value,
                 reply_to: document.getElementById('email').value
             };
