Configure SendGrid with API key and enable SendGrid instead of EmailJS

--- a/sendgrid-test.html
+++ b/sendgrid-test.html
@@ -70,7 +70,7 @@
     <form id="test-form">
         <div class="form-group">
             <label for="api-key">SendGrid API Key</label>
-            <input type="text" id="api-key" name="api-key" required>
+            <input type="text" id="api-key" name="api-key" required value="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">
         </div>
         <div class="form-group">
             <label for="name">Name</label>
