--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
     <experience-component></experience-component>
     
     <!-- Contact Component -->
-    <contact-component></contact-component>
+    <contact-component recipient-email="csorini13@gmail.com" recipient-name="Christopher Sorini"></contact-component>
     
     <!-- Footer Component -->
     <footer-component></footer-component>
