Update name to Christopher T. Sorini and change initials to CTS

--- a/src/emailjs-test.html
+++ b/src/emailjs-test.html
@@ -14,7 +14,7 @@
         
         // Configuration
         const config = {
-            recipientName: "Christopher Sorini",
+            recipientName: "Christopher T. Sorini",
             recipientEmail: document.getElementById('recipient-email')?.value || "contact@example.com"
         };
         
