--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christopher Sorini | Software Engineer</title>
-    <meta name="description" content="Portfolio showcasing Christopher Sorini's journey and projects as a software engineer">
+    <title>Christopher T. Sorini | Software Engineer</title>
+    <meta name="description" content="Portfolio showcasing Christopher T. Sorini's journey and projects as a software engineer">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_logoai/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_logoai/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_logoai/favicon-16x16.png">
@@ -107,7 +107,7 @@
     <experience-component></experience-component>
     
     <!-- Contact Component -->
-    <contact-component recipient-email="csorini13@gmail.com" recipient-name="Christopher Sorini"></contact-component>
+    <contact-component recipient-email="csorini13@gmail.com" recipient-name="Christopher T. Sorini"></contact-component>
     
     <!-- Footer Component -->
     <footer-component></footer-component>
