--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     
     <!-- Hero Component -->
     <hero-component>
-        <source src="src/images/chicago_dusk.mp4" type="video/mp4" slot="video-source">
+        <source src="src/images/chicago.mp4" type="video/mp4" slot="video-source">
     </hero-component>
     
     <!-- About Component -->
